syntax = "proto3";

package dss;
option go_package = "rpc/dss";

service Discount {
	rpc Get(DiscountGetReq) returns (DiscountGetRes);
}

enum PurchaseItem {
	FullWeekendPassPurchaseItem = 0;
	DanceOnlyPassPurchaseItem = 1;
	MixAndMatchPurchaseItem = 2;
	SoloJazzPurchaseItem = 3;
	TeamCompetitionPurchaseItem = 4;
	TShirtPurchaseItem = 5;
}

message DiscountAmount {
	oneof amount {
		int64 dollar = 1;
		string percent = 2;
	}
}

message SingleDiscount {
	DiscountAmount amount = 1;
	PurchaseItem applied_to = 2;
}

message DiscountBundle {
	string code = 1;
	repeated SingleDiscount discounts = 2;
}

message DiscountGetReq {
	string code = 1;
}

message DiscountGetRes {
	DiscountBundle bundle = 1;
}
